# sound-recorder

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.junie/: AGENTS.md
.junie/commands/: speckit.plan.md
.junie/plans/: fix-post-upgrade-build.md  terminal-audio-recorder-ratatui.md  update-specs-for-record-play-fixes.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  junie.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
config/: audio.conf
specs/001-terminal-audio-recorder-player/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tui-recorder-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-continuous-recording/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-audio-format-compression/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: error.rs  lib.rs  main.rs
src/audio/: devices.rs  mod.rs  monitor.rs  playback.rs  process.rs  record.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/model/: mod.rs
src/tui/: app.rs  mod.rs  view.rs
tests/: integration.rs  unit.rs
tests/integration/: config_record.rs  list_devices_cli.rs  play_cli.rs  record_cli.rs
tests/unit/: config_parse.rs  playback_validation.rs  profile_validation.rs  record_validation.rs
(+11 files in other folders)
