[package]
name = "sound-recorder"
version = "1.2.0"
edition = "2024"

[dependencies]
cpal = "0.17.3"
hound = "3.5.1"
ratatui = "0.30.0"
crossterm = "0.29.0"
thiserror = "2.0.11"
chrono = "0.4.39"

# Performance: samply record ./target/release/sound-recorder
[profile.release]
opt-level = 3          # Maximize speed optimizations
lto = true             # Enable Link-Time Optimization across crates
codegen-units = 1      # Reduce parallel compilation blocks to maximize LLVM optimization
panic = "abort"        # Remove stack unwinding overhead (reduces binary size and speed)